vehicle_gateway_multi/src/to_fix.log
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp: In function ‘void data_handler(z_loaned_sample_t*, void*)’:
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:24:40: error: ‘z_loaned_sample_t’ {aka ‘struct z_loaned_sample_t’} has no member named ‘keyexpr’
   24 |   z_keyexpr_to_string(&keystr, sample->keyexpr);
      |                                        ^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:24:3: error: ‘z_keyexpr_to_string’ was not declared in this scope; did you mean ‘z_keyexpr_join’?
   24 |   z_keyexpr_to_string(&keystr, sample->keyexpr);
      |   ^~~~~~~~~~~~~~~~~~~
      |   z_keyexpr_join
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:26:73: error: ‘z_loaned_sample_t’ {aka ‘struct z_loaned_sample_t’} has no member named ‘kind’
   26 |     ">> [Subscriber] Received %s ('%s': '%.*s')\n", kind_to_str(sample->kind), z_loan(keystr),
      |                                                                         ^~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:27:18: error: ‘z_loaned_sample_t’ {aka ‘struct z_loaned_sample_t’} has no member named ‘payload’
   27 |     (int)sample->payload.len, sample->payload.start);
      |                  ^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:27:39: error: ‘z_loaned_sample_t’ {aka ‘struct z_loaned_sample_t’} has no member named ‘payload’
   27 |     (int)sample->payload.len, sample->payload.start);
      |                                       ^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp: In function ‘int main(int, char**)’:
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:44:38: error: invalid conversion from ‘const z_loaned_config_t*’ to ‘z_loaned_config_t*’ [-fpermissive]
   44 |     if (zc_config_insert_json5(z_loan(config), Z_CONFIG_LISTEN_KEY, argv[2]) < 0) {
      |                                ~~~~~~^~~~~~~~
      |                                      |
      |                                      const z_loaned_config_t*
In file included from /home/vehicle_gateway/install/zenohc/include/zenoh.h:29,
                 from /home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:16:
/home/vehicle_gateway/install/zenohc/include/zenoh_commons.h:5794:61: note:   initializing argument 1 of ‘z_result_t zc_config_insert_json5(z_loaned_config_t*, const char*, const char*)’
 5794 | z_result_t zc_config_insert_json5(struct z_loaned_config_t *this_,
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:57:48: error: ‘z_check’ was not declared in this scope
   57 |   if (z_open(&s, z_move(config), NULL) < 0 || !z_check(s)) {
      |                                                ^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:62:41: warning: missing initializer for member ‘z_owned_closure_sample_t::_call’ [-Wmissing-field-initializers]
   62 |   z_owned_closure_sample_t callback = {0};
      |                                         ^
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:62:41: warning: missing initializer for member ‘z_owned_closure_sample_t::_drop’ [-Wmissing-field-initializers]
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:66:37: error: ‘z_keyexpr’ was not declared in this scope
   66 |     z_declare_subscriber(z_loan(s), z_keyexpr(expr), z_move(callback), NULL);
      |                                     ^~~~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:67:8: error: ‘z_check’ was not declared in this scope
   67 |   if (!z_check(sub)) {
      |        ^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:82:17: error: invalid conversion from ‘const z_loaned_session_t*’ to ‘z_loaned_session_t*’ [-fpermissive]
   82 |   z_close(z_loan(s), NULL);
      |           ~~~~~~^~~
      |                 |
      |                 const z_loaned_session_t*
In file included from /home/vehicle_gateway/install/zenohc/include/zenoh.h:29,
                 from /home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge_client.cpp:16:
/home/vehicle_gateway/install/zenohc/include/zenoh_commons.h:2060:47: note:   initializing argument 1 of ‘z_result_t z_close(z_loaned_session_t*, z_close_options_t*)’
 2060 | z_result_t z_close(struct z_loaned_session_t *session,
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
gmake[2]: *** [CMakeFiles/vehicle_gateway_multi_bridge_client.dir/build.make:76: CMakeFiles/vehicle_gateway_multi_bridge_client.dir/src/vehicle_gateway_multi_bridge_client.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/vehicle_gateway_multi_bridge_client.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp: In member function ‘int ZenohBridge::initialize()’:
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:82:32: error: ‘z_keyexpr’ was not declared in this scope; did you mean ‘z_keyexpr_take’?
   82 |       z_loan(*this->session_), z_keyexpr(this->zenoh_key_name_.c_str()), NULL);
      |                                ^~~~~~~~~
      |                                z_keyexpr_take
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:83:10: error: ‘z_check’ was not declared in this scope
   83 |     if (!z_check(this->pub_)) {
      |          ^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp: In member function ‘void ZenohBridge::publish_data()’:
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:107:72: error: too few arguments to function ‘void z_publisher_put_options_default(z_publisher_put_options_t*)’
  107 |     z_publisher_put_options_t options = z_publisher_put_options_default();
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /home/vehicle_gateway/install/zenohc/include/zenoh.h:29,
                 from /home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:17:
/home/vehicle_gateway/install/zenohc/include/zenoh_commons.h:4083:17: note: declared here
 4083 | ZENOHC_API void z_publisher_put_options_default(struct z_publisher_put_options_t *this_);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:108:35: error: ‘Z_ENCODING_PREFIX_TEXT_JSON’ was not declared in this scope
  108 |     options.encoding = z_encoding(Z_ENCODING_PREFIX_TEXT_JSON, NULL);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:108:24: error: ‘z_encoding’ was not declared in this scope; did you mean ‘z_encoding_take’?
  108 |     options.encoding = z_encoding(Z_ENCODING_PREFIX_TEXT_JSON, NULL);
      |                        ^~~~~~~~~~
      |                        z_encoding_take
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:111:7: error: cannot convert ‘const uint8_t*’ {aka ‘const unsigned char*’} to ‘z_moved_bytes_t*’
  111 |       reinterpret_cast<const uint8_t *>(s.c_str()),
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |       |
      |       const uint8_t* {aka const unsigned char*}
In file included from /home/vehicle_gateway/install/zenohc/include/zenoh.h:29,
                 from /home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:17:
/home/vehicle_gateway/install/zenohc/include/zenoh_commons.h:4078:52: note:   initializing argument 2 of ‘z_result_t z_publisher_put(const z_loaned_publisher_t*, z_moved_bytes_t*, z_publisher_put_options_t*)’
 4078 |                            struct z_moved_bytes_t *payload,
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp: In function ‘int main(int, char**)’:
/home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:183:17: error: invalid conversion from ‘const z_loaned_session_t*’ to ‘z_loaned_session_t*’ [-fpermissive]
  183 |   z_close(z_loan(session), NULL);
      |           ~~~~~~^~~~~~~~~
      |                 |
      |                 const z_loaned_session_t*
In file included from /home/vehicle_gateway/install/zenohc/include/zenoh.h:29,
                 from /home/vehicle_gateway/src/vehicle_gateway/vehicle_gateway_multi/src/vehicle_gateway_multi_bridge.cpp:17:
/home/vehicle_gateway/install/zenohc/include/zenoh_commons.h:2060:47: note:   initializing argument 1 of ‘z_result_t z_close(z_loaned_session_t*, z_close_options_t*)’
 2060 | z_result_t z_close(struct z_loaned_session_t *session,
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
